Update set-up documentation